--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "react-scripts": "0.1.0"
   },
   "dependencies": {
+    "lspi": "^1.1.1",
     "react": "^15.2.1",
     "react-dom": "^15.2.1",
     "react-router": "^2.6.0"
