--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "lspi": "^1.1.2",
     "react": "^15.2.1",
+    "react-bootstrap": "^0.30.0-rc.2",
     "react-dom": "^15.2.1",
     "react-router": "^2.6.0"
   },
